Finally fixed graphs?

--- a/graphs.html
+++ b/graphs.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IB Econ Graphs</title>
-    <link rel="icon" type="image/x-icon" href="/images/IB Logo.png">
+    <link rel="icon" type="image/x-icon" href="images/IB Logo.png">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -81,10 +81,10 @@
     <div id="evaluations-container">
     </div>
 
-    <script src="/js/graphCanvas.js"></script>
-    <script src="/js/graphEvaluation.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/popup.js"></script>
+    <script src="js/graphCanvas.js"></script>
+    <script src="js/graphEvaluation.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/popup.js"></script>
 
 </body>
 
