--- a/instructions.html
+++ b/instructions.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>How to Use the IB Econ Graph Tool</title>
-    <link rel="stylesheet" href="/css/style-help.css">
+    <link rel="stylesheet" href="css/style-help.css">
 
-    <link rel="icon" href="/images/IB Logo.png" type="image/png">
+    <link rel="icon" href="images/IB Logo.png" type="image/png">
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -91,7 +91,7 @@
 
 <body>
     <nav id="navbar">
-        <button onclick="window.location.href='/'">🏠 Home</button>
+        <a href="graphs.html"><button>Back to Graph Practice</button></a>
         <button class="active">📘 How to Use</button>
     </nav>
 
