Fixed links on graphs.html

--- a/graphs.html
+++ b/graphs.html
@@ -23,8 +23,8 @@
 
     <nav id="navbar">
         <div id="navbar-top"></div>
-        <button onclick="window.location.href='/'">Home</button>
-        <button onclick="window.location.href='/instructions'">How to Use</button>
+        <a href="index.html"><button>Home</button></a>
+        <a href="instructions.html"><button>How to Use</button></a>
         <button id="random-graph-btn">Random Graph</button>
     </nav>
 
