Maybe fixed json links?

--- a/index.html
+++ b/index.html
@@ -69,19 +69,16 @@
     </section>
 
     <section class="coming-soon fade-in">
-        <h2>🚧 Coming Soon!!! 🚧</h2>
+        <a href="graphs.html">
+            <h2>Graph Practice!</h2>
+        </a>
         <div class="hourglass-container">
             <div class="hourglass"></div>
         </div>
-        <p>Noah and I are currently building an interactive quiz that lets you practice drawing IB Economics graphs 📈
+        <p>Test your graph-making skills in our interactive quiz that lets you practice drawing IB Economics graphs! 📈
         </p>
         <p>You'll receive feedback on your diagrams based on what you missed like labels and shifts.</p>
-        <p>Will be done soon...</p>
-
-        <a href="graphs.html">
-            <h1>Graph Practice!</h1>
-        </a>
-
+        <p>Available Now!</p>
     </section>
 
     <footer>
