--- a/instructions.html
+++ b/instructions.html
@@ -115,6 +115,18 @@
             <li><span class="mode-icon"> Clear:</span> Reset the entire canvas</li>
         </ul>
 
+        <h2>⚙️ General</h2>
+        <ul>
+            <li><span class="mode-icon"> When drawing lines, hold down shift to draw at perfect angles. This is good for
+                    drawing vertical or horizontal lines, or for drawing parallel lines.</li>
+            <li><span class="mode-icon"> Arrows and steps are not graded, but you can use them if you wish to help
+                    organize your graph.</li>
+            <li><span class="mode-icon"> Points are also not graded, but lines can snap to them, which makes it easier
+                    to create intersections.</li>
+            <li><span class="mode-icon"> The grader may not be 100% perfect all of the time! There are still a few bugs
+                    here and there.</li>
+        </ul>
+
         <h2>🏷️ Labeling Guide</h2>
         <p>Use standard IB terms — not case-sensitive:</p>
         <ul>
@@ -127,6 +139,13 @@
             <li><strong>Points:</strong> Used for guidance only, not assessed</li>
             <li><strong>Dotted-line labels:</strong> <code>P</code>, <code>P1</code>, <code>Q</code>, <code>Q1</code>,
                 <code>Y</code>, <code>Y1</code>, etc.
+            </li>
+            <li>The grader does not distinguish between <code>p</code> and <code>pe</code> or <code>q</code> and
+                <code>qe</code>,
+                but it will distinguish between other forms of equilibrium, such as <code>W</code> and <code>We</code>.
+            </li>
+            <li>If you don't know what the grader wants a certain curve or axis to be labeled, usually the grader will
+                tell you what lines you are missing in its feedback.
             </li>
         </ul>
 
