--- a/instructions.html
+++ b/instructions.html
@@ -119,6 +119,8 @@
         <ul>
             <li><span class="mode-icon"> When drawing lines, hold down shift to draw at perfect angles. This is good for
                     drawing vertical or horizontal lines, or for drawing parallel lines.</li>
+            <li><span class="mode-icon"> When drawing lines, your pointer will snap to intersections and points to help
+                    you draw the graph easier.</li>
             <li><span class="mode-icon"> Arrows and steps are not graded, but you can use them if you wish to help
                     organize your graph.</li>
             <li><span class="mode-icon"> Points are also not graded, but lines can snap to them, which makes it easier
