--- a/index.html
+++ b/index.html
@@ -68,17 +68,15 @@
         </div>
     </section>
 
-    <section class="coming-soon fade-in">
-        <a href="graphs.html">
-            <h2>Graph Practice!</h2>
-        </a>
+    </section>
+
+    <section class="coming-soon">
+        <h2>Finished: Graph Practice Mode</h2>
+        <p>Test yourself with interactive diagram quiz/p>
+        <p>You'll receive feedback on your diagrams based on what you missed like labels and shifts.</p>
         <div class="hourglass-container">
             <div class="hourglass"></div>
         </div>
-        <p>Test your graph-making skills in our interactive quiz that lets you practice drawing IB Economics graphs! 📈
-        </p>
-        <p>You'll receive feedback on your diagrams based on what you missed like labels and shifts.</p>
-        <p>Available Now!</p>
     </section>
 
     <footer>
