--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section class="coming-soon fade-in">
         <a href="graphs.html">
-            <h2>Graph Practice!</h2>
+            <h2>Finished: Graph Practice!</h2>
         </a>
         <div class="hourglass-container">
             <div class="hourglass"></div>
@@ -78,7 +78,7 @@
         <p>Test your graph-making skills in our interactive quiz that lets you practice drawing IB Economics graphs! 📈
         </p>
         <p>You'll receive feedback on your diagrams based on what you missed like labels and shifts.</p>
-        <p>Available Now!</p>
+        <p></p>
     </section>
 
     <footer>
