--- a/graphs.html
+++ b/graphs.html
@@ -18,7 +18,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'YOUR-GA-ID');
+      gtag('config', 'G-T4TSR5CJFK');
     </script>
 
 </head>
